Funcionalidade do Listar Mentores

--- a/src/main/resources/templates/compartilhado/top.html
+++ b/src/main/resources/templates/compartilhado/top.html
@@ -63,7 +63,10 @@
                     <span>Administradores</span></a>
                     <a class="nav-link" href="/cadastroMentor">
                         <i class="fas fa-fw fa-table"></i>
-                        <span>Mentores</span></a>
+                        <span>Cadastro Mentores</span></a>
+                     <a class="nav-link" href="/mentores">
+                            <i class="fas fa-fw fa-table"></i>
+                            <span>Mentores</span></a>
             </li>
             
             <!-- Divider -->
