Ajustes no Banco e na tela index

--- a/src/main/resources/templates/compartilhado/topusuario.html
+++ b/src/main/resources/templates/compartilhado/topusuario.html
@@ -45,7 +45,7 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard - <span th:text="${nome}"></span></a>
+                    <span>Usuario -  <span th:text="${nome}"></span></a>
             </li>
 
             <!-- Divider -->
@@ -60,16 +60,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/administradores">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Administradores</span></a>
-                    <a class="nav-link" href="/cadastroMentor">
-                        <i class="fas fa-fw fa-table"></i>
-                        <span>Cadastro Mentores</span></a>
                      <a class="nav-link" href="/mentores">
                             <i class="fas fa-fw fa-table"></i>
                             <span>Mentores</span></a>
-                            <a class="nav-link" href="/mentores">
-                                <i class="fas fa-fw fa-table"></i>
-                                <span>Editar Mentores</span></a>
             </li>
             
             <!-- Divider -->
