--- a/src/main/resources/templates/site/Inicio.html
+++ b/src/main/resources/templates/site/Inicio.html
@@ -30,6 +30,7 @@
                         <li class="nav-item mt-1"><a class="nav-link" href="sobre.html">Sobre</a></li>
                         <li class="nav-item mt-1"><a class="nav-link" href="#contato">Contato</a></li>
                         <li class="nav-item mt-1"><a class="nav-link" href="/cadastroMentor">Cadastre-se</a></li>
+                        <li class="nav-item mt-1"><a class="nav-link" href="/cadastroUsuario">Cadastre-se usuario</a></li>
                         <li class="nav-item btn btn-outline-secondary btn-sm botao-nav"><a class="nav-link" href="/login">ENTRAR</a></li>
                     </ul>
                 </div>
