--- a/src/main/resources/templates/mentores/editarmentor.html
+++ b/src/main/resources/templates/mentores/editarmentor.html
@@ -10,7 +10,7 @@
 
         <!-- DataTales Example -->
         <div class="card shadow mb-4" style="padding: 30px;">
-            <form method="POST" th:action="@{'/mentores/' + ${mentor?.id_mentor} + '/atualizar'}">
+            <form method="POST" th:action="@{'/mentores/' + ${mentor?.id} + '/atualizar'}">
                 <div class="form-group">
                     <label for="nome">Nome</label>
                     <input type="text" class="form-control" th:value="${mentor?.nome_mentor}" required id="nomeMentor" name="nomeMentor" placeholder="Digite o seu nome">
