Funcionalidade de Cadastro do Usuario

--- a/src/main/resources/templates/compartilhado/top.html
+++ b/src/main/resources/templates/compartilhado/top.html
@@ -58,12 +58,6 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="/administradores">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Administradores</span></a>
-                    <a class="nav-link" href="/cadastroMentor">
-                        <i class="fas fa-fw fa-table"></i>
-                        <span>Cadastro Mentores</span></a>
                      <a class="nav-link" href="/mentores">
                             <i class="fas fa-fw fa-table"></i>
                             <span>Mentores</span></a>
@@ -137,7 +131,7 @@
                                 aria-labelledby="userDropdown">
                                 <a class="dropdown-item" href="/administradores">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Administradores
+                                    Mentores
                                 </a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
