--- a/src/main/resources/templates/mentores/listarmentores.html
+++ b/src/main/resources/templates/mentores/listarmentores.html
@@ -1,4 +1,4 @@
-<div th:replace="compartilhado/topusuario"></div>
+<div th:replace="compartilhado/top"></div>
     <!-- Begin Page Content -->
     <div class="container-fluid">
 
