--- a/src/main/resources/templates/compartilhado/top.html
+++ b/src/main/resources/templates/compartilhado/top.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 
@@ -45,7 +45,10 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard - <span th:text="${nome}"></span></a>
+                    <span>Dashboard Mentores - </span>
+                    <span th:text="${nome}">
+                    </span>
+                </a>
             </li>
 
             <!-- Divider -->
@@ -60,10 +63,13 @@
             <li class="nav-item">
                      <a class="nav-link" href="/mentores">
                             <i class="fas fa-fw fa-table"></i>
-                            <span>Mentores</span></a>
-                            <a class="nav-link" href="/mentores">
+                            <span>Cadastrar Perfil</span></a>
+                            <a class="nav-link" href="/mentores/{id}">
                                 <i class="fas fa-fw fa-table"></i>
-                                <span>Editar Mentores</span></a>
+                                <span>Atualizar Perfil</span></a>
+                                <a class="nav-link" href="/mentores/{id}">
+                                    <i class="fas fa-fw fa-table"></i>
+                                    <span>Cadastrar Agendamento</span></a>                                 
             </li>
             
             <!-- Divider -->
