Funcionalidade do atualizar perfil

--- a/src/main/resources/templates/compartilhado/top.html
+++ b/src/main/resources/templates/compartilhado/top.html
@@ -67,7 +67,7 @@
                             <a class="nav-link" href="/mentores/{id}">
                                 <i class="fas fa-fw fa-table"></i>
                                 <span>Atualizar Perfil</span></a>
-                                <a class="nav-link" href="/mentores/{id}">
+                                <a class="nav-link" href="/editarmentor">
                                     <i class="fas fa-fw fa-table"></i>
                                     <span>Cadastrar Agendamento</span></a>                                 
             </li>
