--- a/src/main/resources/templates/mentores/editarmentor.html
+++ b/src/main/resources/templates/mentores/editarmentor.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">Edição de Administrador</h1>
+        <h1 class="h3 mb-2 text-gray-800">Edição de Mentor</h1>
         <p class="mb-4">
             Aqui iremos editar o Mentor
         </p>
@@ -25,7 +25,7 @@
                 </div>
                 <div class="form-group">
                     <label for="observacao">Celular</label>
-                    <textarea class="form-control" id="celularMentor" name="celularMentor" placeholder="Digite o seu observação" th:inline="text">[[${mentor.celular}]]</textarea>
+                    <textarea class="form-control" id="celularMentor" name="celularMentor" placeholder="Digite o seu observação" th:inline="text">[[${mentor.celularMentor}]]</textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
