--- a/src/main/resources/templates/site/modelo.html
+++ b/src/main/resources/templates/site/modelo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- CSS personalizado -->
     <link rel="stylesheet" href="css/persona.css">
-    <title>ENTRAR</title>
+    <title>MentorTech - ENTRAR</title>
 </head>
 <body class="bg-dark body-casdastro">
     <div class="card bg-transparent w-50 w-auto">
