--- a/src/main/resources/static/css/persona.css
+++ b/src/main/resources/static/css/persona.css
@@ -1,5 +1,5 @@
 header{
-    background-image: url(/assets/img/businesswoman-login.jpg);
+    background-image: url(/src/main/resources/static/img/businesswoman-login.jpg);
     background-repeat: no-repeat;
     background-position: 100%;
     background-size: 100%;
@@ -8,16 +8,20 @@ header{
 .header-containe{
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
-  height: 65vh;
-  
+  height: 63vh;
+  margin-top: 15.5px;
 }
+
+.bg-mentorTech{
+    background-color: rgba(0, 0, 0, 0.5);;
+  }
+
 .text-size{
     font-size: 16pt;
 }
 .card-sobre{
-    background-image: url(/assets/img/people.jpg);
+    background-image: url(/src/main/resources/static/img/people.jpg);
     background-repeat: no-repeat;
-    
     height: 100vh;
     background-size: 100%; 
 }
