--- a/src/main/resources/templates/site/Inicio.html
+++ b/src/main/resources/templates/site/Inicio.html
@@ -7,54 +7,68 @@
         <meta name="author" content="" />
         <title>MENTORTECH</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="/css/styles.css" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
         <!-- CSS personalizado -->
-        <link rel="stylesheet" href="/css/persona.css">
-
+        <link rel="stylesheet" href="css/persona.css">
     </head>
     <body>
-        <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark z-index">
-            <div class="container px-5">
-                <a class="navbar-brand" href="#!"> <h1 class="display-6">MentorTech</h1></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
-                        <li class="nav-item mt-1"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                        <li class="nav-item mt-1"><a class="nav-link" href="#features">Serviços</a></li>
-                        <li class="nav-item mt-1"><a class="nav-link" href="#planos">Planos</a></li>
-                        <li class="nav-item mt-1"><a class="nav-link" href="sobre.html">Sobre</a></li>
-                        <li class="nav-item mt-1"><a class="nav-link" href="#contato">Contato</a></li>
-                        <li class="nav-item mt-1"><a class="nav-link" href="/iniciocadastro">Cadastre-se</a></li>
-                        <!--<li class="nav-item mt-1"><a class="nav-link" href="/cadastroUsuario">Cadastre-se usuario</a></li>-->
-                        <li class="nav-item btn btn-outline-secondary btn-sm botao-nav"><a class="nav-link" href="/login">ENTRAR</a></li>
-                    </ul>
-                </div>
+        <div class="col">
+            <div class="row m-0 ">
+                <!-- Responsive navbar-->
+                <nav class="nave-topo navbar navbar-expand-lg navbar-dark bg-mentorTech z-index nav-topo">
+                    <div class="container">
+                        <a class="navbar-brand" href="#!"> <h1 style="font-size: 25px;">MentorTech</h1></a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                                <li class="nav-item mt-1"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                                <li class="nav-item mt-1"><a class="nav-link" href="#features">Serviços</a></li>
+                                <li class="nav-item mt-1"><a class="nav-link" href="#planos">Planos</a></li>
+                                <li class="nav-item mt-1"><a class="nav-link" href="sobre.html">Sobre</a></li>
+                                <li class="nav-item mt-1"><a class="nav-link" href="#contato">Contato</a></li>
+                                <li class="nav-item mt-1"><a class="nav-link" href="/iniciocadastro">Cadastre-se</a></li>
+                                <li class="nav-item mt-1">
+                                    <div class="btn-group" role="group" aria-label="login para mentores e usuarios">
+                                        <button type="button" style="border-radius: 20px 0 0 20px;" class="btn btn-secondary bg-dark">
+                                            <a href="" class="text-white-50" style="text-decoration:none">Cliente</a>
+                                        </button>
+                                        <button type="button" style="border-radius: 0 20px 20px 0;" class="btn btn-primary ">
+                                            <a href="" class="text-white-50" style="text-decoration:none">Mentor</a>
+                                        </button>
+                                    </div>
+                                </li>
+                                
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
             </div>
-        </nav>
-        <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="header-containe">
-                <div class="container px-5">
-                    <div class="row gx-5 justify-content-center">
-                        <div class="col-lg-6">
-                            <div class="text-center my-5">
-                                <h1 class="display-4 fw-bolder text-white mb-2">O sucesso te espera aqui!</h1>
-                                <p class="lead text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
-                                <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                                    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="cadastrese.html" target="blank">Começar</a>
-                                    <a class="btn btn-outline-light btn-lg px-4" href="#!">Saiba mais</a>
+            <div class="row">
+                    <!-- Header-->
+                    <header class="bg-dark py-5">
+                        <div class="header-containe">
+                            <div class="container px-5">
+                                <div class="row gx-5 justify-content-center">
+                                    <div class="col-lg-6 mt-5">
+                                        <div class="text-center my-5">
+                                            <h1 class="display-4 fw-bolder text-white mb-2">O sucesso te espera aqui!</h1>
+                                            <p class="lead text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
+                                            <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
+                                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="/iniciocadastro" target="blank">Começar</a>
+                                                <a class="btn btn-outline-light btn-lg px-4" href="#!">Saiba mais</a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
+                    </header>
             </div>
-        </header>
+        </div>
         <!-- Features section-->
         <section class="py-5 border-bottom" id="features">
             <div class="container px-5 my-5">
