Caminho css persona
Atualização no caminho do persona.css

Co-Authored-By: ANDERSON SILVA DE OLIVEIRA <83041378+AndersonSilvaJob@users.noreply.github.com>

--- a/src/main/resources/templates/site/escolhacadastro.html
+++ b/src/main/resources/templates/site/escolhacadastro.html
@@ -11,7 +11,7 @@
      <!-- Core theme CSS (includes Bootstrap)-->
      <link href="css/styles.css" rel="stylesheet" />
      <!-- CSS personalizado -->
-     <link rel="stylesheet" href="css/persona.css">
+     <link rel="stylesheet" href="/src/main/resources/static/css/persona.css">
     <title>MentorTech - Cadastro</title>
 </head>
 <body class="bg-dark body-login">
