--- a/src/main/resources/templates/site/escolhacadastro.html
+++ b/src/main/resources/templates/site/escolhacadastro.html
@@ -17,12 +17,12 @@
 <body class="bg-dark body-login">
     <div class="card bg-white border-0 p-0 " style="min-width:50vw; border-radius: 10px;">
         <div class="card-title text-white text-center w-100 bg-primary p-5">
-            <h1>Ecolha seu Perfil</h1>
+            <h1>Escolha seu Perfil</h1>
         </div>
         <div class="row border-0 m-2">
             <div class="col d-flex justify-content-center align-items-center colcadastro" style="height: 40vh;">
                 <a href="/cadastroUsuario" class="" style="text-decoration:none; font-size:40px">
-                    Cliente
+                    Usuario
                 </a>
             </div>
             <div class="col d-flex justify-content-center align-items-center colcadastro" style="height: 40vh;">
