--- a/src/main/resources/templates/mentores/listarmentores.html
+++ b/src/main/resources/templates/mentores/listarmentores.html
@@ -7,6 +7,7 @@
         <p class="mb-4">
             Aqui irá listar os Mentores do meu sistema
         </p>
+        <span th:text="${id}"></span>
 
         <!-- DataTales Example -->
         <div class="card shadow mb-4">
