--- a/src/main/resources/templates/site/Inicio.html
+++ b/src/main/resources/templates/site/Inicio.html
@@ -34,10 +34,10 @@
                                 <li class="nav-item mt-1">
                                     <div class="btn-group" role="group" aria-label="login para mentores e usuarios">
                                         <button type="button" style="border-radius: 20px 0 0 20px;" class="btn btn-secondary bg-dark">
-                                            <a href="" class="text-white-50" style="text-decoration:none">Cliente</a>
+                                            <a href="/loginusuario" class="text-white-50" style="text-decoration:none">Cliente</a>
                                         </button>
                                         <button type="button" style="border-radius: 0 20px 20px 0;" class="btn btn-primary ">
-                                            <a href="" class="text-white-50" style="text-decoration:none">Mentor</a>
+                                            <a href="/loginmentor" class="text-white-50" style="text-decoration:none">Mentor</a>
                                         </button>
                                     </div>
                                 </li>
