Criação da classe Agendamento

--- a/src/main/resources/templates/compartilhado/topusuario.html
+++ b/src/main/resources/templates/compartilhado/topusuario.html
@@ -62,7 +62,7 @@
                     <i class="fas fa-fw fa-table"></i>
                      <a class="nav-link" href="/mentores">
                             <i class="fas fa-fw fa-table"></i>
-                            <span>Mentores</span></a>
+                            <span>Usuarios</span></a>
             </li>
             
             <!-- Divider -->
