--- a/src/main/resources/templates/usuarios/usuario.html
+++ b/src/main/resources/templates/usuarios/usuario.html
@@ -3,9 +3,9 @@
     <div class="container-fluid">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">Mentores</h1>
+        <h1 class="h3 mb-2 text-gray-800">Usuarios</h1>
         <p class="mb-4">
-            Aqui irá listar os Mentores do meu sistema
+            Aqui irá listar os Usuarios do meu sistema
         </p>
 
         <!-- DataTales Example -->
