--- a/src/main/resources/templates/site/cadastrarmentor.html
+++ b/src/main/resources/templates/site/cadastrarmentor.html
@@ -38,7 +38,8 @@
                 </div>
                 <div class="form-group">
                     <label for="observacao">celular</label>
-                    <textarea class="form-control" id="celularMentor" name="celularMentor" placeholder="Digite o seu celular"></textarea>
+                    <!--<textarea class="form-control" id="celularMentor" name="celularMentor" placeholder="Digite o seu celular"></textarea>-->
+                    <input type="text" class="form-control" id="celularMentor" placeholder="Digite seu numero de celular">
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
