--- a/src/main/resources/templates/site/cadastrarusuario.html
+++ b/src/main/resources/templates/site/cadastrarusuario.html
@@ -42,19 +42,25 @@
                 </div>
                 <div class="form-group">
                     <label for="observacao">celular</label>
-                    <textarea class="form-control" id="celularUsuario" name="celularUsuario" placeholder="Digite o seu celular"></textarea>
+                    <!--<textarea class="form-control" id="celularUsuario" name="celularUsuario" placeholder="Digite o seu celular"></textarea>-->
+                    <input type="text" class="form-control" id="celularUsuario" name="celularUsuario" placeholder="Digite o seu celular">
                 </div>
                 <div class="form-group">
                     <label for="genero">Genero</label>
-                    <textarea class="form-control" id="generoUsuario" name="generoUsuario" placeholder="Digite o seu celular"></textarea>
+                    <!--<textarea class="form-control" id="generoUsuario" name="generoUsuario" placeholder="Digite o seu celular"></textarea>-->
+                    <input type="text" class="form-control" id="generoUsuario" name="generoUsuario" placeholder="">
+                    
                 </div>
                 <div class="form-group">
                     <label for="linkedin">Linkedin</label>
-                    <textarea class="form-control" id="linkedinUsuario" name="linkedinUsuario" placeholder="Digite o seu celular"></textarea>
+                   <!--<textarea class="form-control" id="linkedinUsuario" name="linkedinUsuario" placeholder="Digite o endereço dos seu Linkedin"></textarea>-->
+                    <input type="text" class="form-control" id="linkedinUsuario" name="linkedinUsuario" placeholder="Digite o seu celular">
+                    
                 </div>
                 <div class="form-group">
                     <label for="github">Github</label>
-                    <textarea class="form-control" id="githubUsuario" name="githubUsuario" placeholder="Digite o seu celular"></textarea>
+                    <!--<textarea class="form-control" id="githubUsuario" name="githubUsuario" placeholder="Digite o seu celular"></textarea>-->
+                    <input type="text" class="form-control" id="githubUsuario" name="githubUsuario" placeholder="Digite o seu celular">
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
