Alterações no Listar Mentores

--- a/src/main/resources/templates/compartilhado/top.html
+++ b/src/main/resources/templates/compartilhado/top.html
@@ -62,7 +62,7 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                     <a class="nav-link" href="/mentores">
+                     <a class="nav-link" th:href="@{'/mentoreslistar/' + ${id}}">
                             <i class="fas fa-fw fa-table"></i>
                             <span>Cadastrar Perfil</span></a>
                             <a class="nav-link" th:href="@{'/mentores/' + ${id}}">
