--- a/src/main/resources/templates/site/cadastrarmentor.html
+++ b/src/main/resources/templates/site/cadastrarmentor.html
@@ -6,23 +6,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
     <!-- CSS personalizado -->
-    <link rel="stylesheet" href="css/persona.css">
-    <title>ENTRAR</title>
+    <link rel="stylesheet" href="/src/main/resources/static/css/persona.css" />
+    <title>Cadastro Mentor</title>
 </head>
-<body>
+<body class="bg-dark">
 
-    <div class="container-fluid">
+    <div class="container-fluid d-flex flex-column align-items-center">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">Novo Mentor</h1>
-        <p class="mb-4">
+        <h1 class="h3 mb-2 text-white mt-5">Novo Mentor</h1>
+        <p class="mb-4 text-white">
             Aqui iremos cadastrar um novo Mentor
         </p>
 
         <!-- DataTales Example -->
-        <div class="card shadow mb-4" style="padding: 30px;">
+        <div class="card mb-4 w-50 cadastro" style="padding: 30px;">
             <form method="POST" action="/mentores/criar" onsubmit="return confirm('Confirma ação')">
                 <div class="form-group">
                     <label for="nome">Nome</label>
@@ -41,7 +41,7 @@
                     <!--<textarea class="form-control" id="celularMentor" name="celularMentor" placeholder="Digite o seu celular"></textarea>-->
                     <input type="text" class="form-control" id="celularMentor" placeholder="Digite seu numero de celular">
                 </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <button type="submit" class="btn btn-secondary">Enviar</button>
             </form>
         </div>
 
