--- a/src/main/resources/templates/site/cadastrarusuario.html
+++ b/src/main/resources/templates/site/cadastrarusuario.html
@@ -6,23 +6,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
     <!-- CSS personalizado -->
-    <link rel="stylesheet" href="css/persona.css">
+    <link rel="stylesheet" href="/src/main/resources/static/css/persona.css" />
     <title>Cadastre-se</title>
 </head>
-<body>
+<body class="bg-dark">
 
-    <div class="container-fluid">
+    <div class="container-fluid d-flex flex-column align-items-sm-center ">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">Novo Usuario</h1>
-        <p class="mb-4">
+        <h1 class="h3 mb-2 text-white mt-5">Novo Usuario</h1>
+        <p class="mb-4 text-white">
             Aqui iremos cadastrar um novo Usuario
         </p>
 
         <!-- DataTales Example -->
-        <div class="card shadow mb-4" style="padding: 30px;">
+        <div class="card mb-4 w-40 cadastro" style="padding: 30px;">
             <form method="POST" action="/usuarios/criar" onsubmit="return confirm('Confirma ação')">
                 <div class="form-group">
                     <label for="nome">Nome</label>
@@ -33,17 +33,19 @@
                     <input type="email" class="form-control" required id="emailUsuario" name="emailUsuario" placeholder="Digite o seu email">
                 </div>
                 <div class="form-group">
-                    <label for="cpf">Cpf</label>
-                    <input type="text" class="form-control" required id="cpfUsuario" name="cpfUsuario" placeholder="Digite o seu cpf">
-                </div>
-                <div class="form-group">
                     <label for="senha">Senha</label>
                     <input type="password" class="form-control" required id="senhaUsuario" name="senhaUsuario" placeholder="Digite o seu senha">
                 </div>
-                <div class="form-group">
-                    <label for="observacao">celular</label>
-                    <!--<textarea class="form-control" id="celularUsuario" name="celularUsuario" placeholder="Digite o seu celular"></textarea>-->
-                    <input type="text" class="form-control" id="celularUsuario" name="celularUsuario" placeholder="Digite o seu celular">
+                <div class="row">
+                    <div class="col-6">
+                        <label for="cpf">Cpf</label>
+                        <input type="text" class="form-control" required id="cpfUsuario" name="cpfUsuario" placeholder="Digite o seu cpf">
+                    </div>
+                    <div class="col-6">
+                        <label for="observacao">celular</label>
+                        <!--<textarea class="form-control" id="celularUsuario" name="celularUsuario" placeholder="Digite o seu celular"></textarea>-->
+                        <input type="text" class="form-control" id="celularUsuario" name="celularUsuario" placeholder="Digite o seu celular">
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="genero">Genero</label>
@@ -62,7 +64,7 @@
                     <!--<textarea class="form-control" id="githubUsuario" name="githubUsuario" placeholder="Digite o seu celular"></textarea>-->
                     <input type="text" class="form-control" id="githubUsuario" name="githubUsuario" placeholder="Digite o seu celular">
                 </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <button type="submit" class="btn btn-secondary">Enviar</button>
             </form>
         </div>
 
