--- a/src/main/resources/templates/site/escolhacadastro.html
+++ b/src/main/resources/templates/site/escolhacadastro.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- Favicon-->
      <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-     <!-- Bootstrap icons-->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
+
      <!-- Core theme CSS (includes Bootstrap)-->
-     <link href="css/styles.css" rel="stylesheet" />
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
      <!-- CSS personalizado -->
-     <link rel="stylesheet" href="/src/main/resources/static/css/persona.css">
+     <link rel="stylesheet" href="/src/main/resources/static/css/persona.css" />
     <title>MentorTech - Cadastro</title>
 </head>
-<body class="bg-dark body-login">
-    <div class="card bg-white border-0 p-0 " style="min-width:50vw; border-radius: 10px;">
+<body class="bg-dark d-flex align-items-sm-center justify-content-center">
+    <div class="card bg-white w-50 border-0 p-0 mt-5 " style="border-radius: 10px;">
         <div class="card-title text-white text-center w-100 bg-primary p-5">
             <h1>Escolha seu Perfil</h1>
         </div>
@@ -33,8 +32,8 @@
         </div>
     </div>
 
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </html>
