--- a/src/main/resources/templates/site/Inicio.html
+++ b/src/main/resources/templates/site/Inicio.html
@@ -13,7 +13,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <!-- CSS personalizado -->
-        <link rel="stylesheet" href="css/persona.css">
+        <link rel="stylesheet" href="css/persona.css" />
     </head>
     <body>
         <div class="col">
