--- a/src/main/resources/static/css/persona.css
+++ b/src/main/resources/static/css/persona.css
@@ -53,7 +53,6 @@ header{
 }
 
 .colcadastro{
-    border-radius: 10px;
     cursor: pointer;
     transition: 0.5s ease;
 }
@@ -79,3 +78,7 @@ header{
 .w-35{width: 35%;}
 .w-30{width: 30%;}
 .w-20{width: 20%;}
+
+.rodape{
+    flex-shrink: 0;
+}
