--- a/src/main/resources/templates/site/cadastrarmentor.html
+++ b/src/main/resources/templates/site/cadastrarmentor.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
     <!-- CSS personalizado -->
-    <link rel="stylesheet" href="/src/main/resources/static/css/persona.css" />
+    <link rel="stylesheet" href="css/persona.css" />
     <title>Cadastro Mentor</title>
 </head>
 <body class="bg-dark">
@@ -22,7 +22,7 @@
         </p>
 
         <!-- DataTales Example -->
-        <div class="card mb-4 w-50 cadastro" style="padding: 30px;">
+        <div class="card mb-4 w-40 cadastro" style="padding: 30px;">
             <form method="POST" action="/mentores/criar" onsubmit="return confirm('Confirma ação')">
                 <div class="form-group">
                     <label for="nome">Nome</label>
@@ -47,8 +47,7 @@
 
     </div>
     <!-- /.container-fluid -->
-<div th:replace="compartilhado/baixo"></div>
-
+        <div th:replace="compartilhado/baixo"></div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
