--- a/src/main/resources/templates/site/escolhacadastro.html
+++ b/src/main/resources/templates/site/escolhacadastro.html
@@ -10,11 +10,11 @@
      <!-- Core theme CSS (includes Bootstrap)-->
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
      <!-- CSS personalizado -->
-     <link rel="stylesheet" href="/src/main/resources/static/css/persona.css" />
+     <link rel="stylesheet" href="css/persona.css" />
     <title>MentorTech - Cadastro</title>
 </head>
 <body class="bg-dark d-flex align-items-sm-center justify-content-center">
-    <div class="card bg-white w-50 border-0 p-0 mt-5 " style="border-radius: 10px;">
+    <div class="card bg-white w-50 border-0 p-0 mt-5 ">
         <div class="card-title text-white text-center w-100 bg-primary p-5">
             <h1>Escolha seu Perfil</h1>
         </div>
