Alterações visual do agendamento

--- a/src/main/resources/templates/compartilhado/topusuario.html
+++ b/src/main/resources/templates/compartilhado/topusuario.html
@@ -62,7 +62,13 @@
                     <i class="fas fa-fw fa-table"></i>
                      <a class="nav-link" href="/mentores">
                             <i class="fas fa-fw fa-table"></i>
-                            <span>Usuarios</span></a>
+                            <span>Atualizar o perfil</span></a>
+                            <a class="nav-link" href="/mentores">
+                                <i class="fas fa-fw fa-table"></i>
+                                <span>Lista de Mentores</span></a>
+                                    <a class="nav-link" href="/mentores">
+                                        <i class="fas fa-fw fa-table"></i>
+                                        <span>Meus Agendamentos</span></a>
             </li>
             
             <!-- Divider -->
