Ajustes no painel de usuario

--- a/src/main/resources/templates/compartilhado/top.html
+++ b/src/main/resources/templates/compartilhado/top.html
@@ -62,12 +62,12 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                     <a class="nav-link" th:href="@{'/mentoreslistar/' + ${id}}">
+                     <!--<a class="nav-link" th:href="@{'/mentoreslistar/' + ${id}}">
                             <i class="fas fa-fw fa-table"></i>
-                            <span>Cadastrar Perfil</span></a>
+                            <span>Cadastrar Perfil</span></a>-->
                             <a class="nav-link" th:href="@{'/mentores/' + ${id}}">
                                 <i class="fas fa-fw fa-table"></i>
-                                <span>Atualizar Perfil</span></a>
+                                <span>Perfil</span></a>
                                 <a class="nav-link" href="/editarmentor">
                                     <i class="fas fa-fw fa-table"></i>
                                     <span>Cadastrar Agendamento</span></a>                                 
