--- a/src/main/resources/templates/mentores/editarmentor.html
+++ b/src/main/resources/templates/mentores/editarmentor.html
@@ -25,8 +25,19 @@
                 </div>
                 <div class="form-group">
                     <label for="observacao">Celular</label>
-                    <textarea class="form-control" id="celularMentor" name="celularMentor" placeholder="Digite o seu observação" th:inline="text">[[${mentor.celularMentor}]]</textarea>
+                    <input type="tel" class="form-control" id="celularMentor" name="celularMentor" placeholder="Digite o seu observação" th:inline="text">[[${mentor.celularMentor}]]/>
+                </div> <div class="form-group">
+                    <label for="observacao">Empresa</label>
+                    <input type="text" class="form-control" id="empresaMentor" name="empresaMentor" placeholder="Digite o seu observação" th:inline="text">[[${mentor.empresaMentor}]]/>
                 </div>
+            </div> <div class="form-group">
+                <label for="observacao">Função</label>
+                <input type="text" class="form-control" id="funcaoMentor" name="funcaoMentor" placeholder="Digite o seu observação" th:inline="text">[[${mentor.funcaoMentor}]]/>
+            </div>
+            <div class="form-group">
+                <label for="observacao">Sua mensagem para os mentorados</label>
+                <textarea class="form-control" id="mensagemUsuario" name="mensagemUsuario" placeholder="Digite o seu observação" th:inline="text">[[${mentor.mensagemUsuario}]]</textarea>
+            </div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
         </div>
