--- a/src/main/resources/templates/usuarios/editarusuario.html
+++ b/src/main/resources/templates/usuarios/editarusuario.html
@@ -25,7 +25,8 @@
                 </div>
                 <div class="form-group">
                     <label for="observacao">Celular</label>
-                    <textarea class="form-control" id="celularUsuario" name="celularUsuario" placeholder="Digite o seu observação" th:inline="text">[[${usuario.celularUsuario}]]</textarea>
+                    <input type="text" class="form-control" id="celularUsuario" name="celularUsuario" placeholder="Digite o seu observação" th:inline="text">[[${usuario.celularUsuario}]]>
+                    <!--<textarea class="form-control" id="celularUsuario" name="celularUsuario" placeholder="Digite o seu observação" th:inline="text">[[${usuario.celularUsuario}]]</textarea>-->
                 </div>
                 <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
