--- a/src/main/resources/templates/site/Inicio.html
+++ b/src/main/resources/templates/site/Inicio.html
@@ -28,7 +28,7 @@
                                 <li class="nav-item mt-1"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
                                 <li class="nav-item mt-1"><a class="nav-link" href="#features">Serviços</a></li>
                                 <li class="nav-item mt-1"><a class="nav-link" href="#planos">Planos</a></li>
-                                <li class="nav-item mt-1"><a class="nav-link" href="sobre.html">Sobre</a></li>
+                                <li class="nav-item mt-1"><a class="nav-link" href="#">Sobre</a></li>
                                 <li class="nav-item mt-1"><a class="nav-link" href="#contato">Contato</a></li>
                                 <li class="nav-item mt-1"><a class="nav-link" href="/iniciocadastro">Cadastre-se</a></li>
                                 <li class="nav-item mt-1">
