--- a/src/main/resources/templates/site/cadastrarmentor.html
+++ b/src/main/resources/templates/site/cadastrarmentor.html
@@ -39,7 +39,7 @@
                 <div class="form-group">
                     <label for="observacao">celular</label>
                     <!--<textarea class="form-control" id="celularMentor" name="celularMentor" placeholder="Digite o seu celular"></textarea>-->
-                    <input type="text" class="form-control" id="celularMentor" placeholder="Digite seu numero de celular">
+                    <input type="text" class="form-control" id="celularMentor" name="celularMentor" placeholder="Digite seu numero de celular">
                 </div>
                 <button type="submit" class="btn btn-secondary">Enviar</button>
             </form>
