--- a/src/main/resources/templates/usuarios/testeAgendamento.html
+++ b/src/main/resources/templates/usuarios/testeAgendamento.html
@@ -1,3 +1,4 @@
+<div th:replace="compartilhado/topusuario"></div>
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -30,7 +31,7 @@
 <body>
     <table class="tabela ">
         <tbody>
-            <tr class="d-flex justify-content-between align-items-center mb-3 p-3">
+            <tr class="d-flex justify-content-between align-items-center mb-3 p-3 ">
                 <td>
                     <div class="borda-redonda" id="foto">
                       <img src="assets/img/mentor.jpg" class="borda-redonda" alt="">
@@ -60,3 +61,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </html>
+<div th:replace="compartilhado/baixo"></div>
